fixed the overflow in lamp 'Separator' in 'Home'

--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -19,6 +19,7 @@
 /* lampSeparator */
 .lampSeparator{
     display: flex;
+    justify-content: center;
     align-items: center;
     height: 50vh;
     max-height: 800px;
